--- a/MemeMe 1.0/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0/Base.lproj/Main.storyboard
@@ -18,11 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-ma-lrP">
-                                <rect key="frame" x="67.5" y="223.5" width="240" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="H4x-VP-E1Z"/>
-                                    <constraint firstAttribute="width" constant="240" id="Ze2-wy-qcP"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
@@ -39,14 +35,16 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EYE-iL-Dpx">
-                                <rect key="frame" x="50" y="70" width="275" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
+                                <rect key="frame" x="175" y="471" width="25" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
-                                <rect key="frame" x="50" y="546" width="275" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EYE-iL-Dpx">
+                                <rect key="frame" x="175" y="147" width="25" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -54,17 +52,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2C5-As-LCh"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="5Ua-9t-iQ8"/>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9a7-2t-4VM"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="top" secondItem="XEd-2Q-Kwi" secondAttribute="bottom" constant="50" id="MqH-KK-36Y"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SAn-TA-FMx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYE-iL-Dpx" secondAttribute="trailing" constant="50" id="Wyz-JA-fuH"/>
-                            <constraint firstItem="EYE-iL-Dpx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="YOT-7W-Jaa"/>
-                            <constraint firstItem="EYE-iL-Dpx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="YwC-21-uPy"/>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="n33-ef-1FB"/>
-                            <constraint firstItem="XEd-2Q-Kwi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="thy-8J-qF0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XEd-2Q-Kwi" secondAttribute="trailing" constant="50" id="u78-ec-NiW"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2bz-T8-gkS"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="6ER-na-my9"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WSh-1x-Kjn"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ago-n9-Sh3"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cyF-xT-KSK"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qut-7g-tAN"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="top" secondItem="ETY-ma-lrP" secondAttribute="bottom" id="tzW-vW-Pcm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
