--- a/MemeMe 1.0/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0/Base.lproj/Main.storyboard
@@ -18,8 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-ma-lrP">
-                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EYE-iL-Dpx">
+                                <rect key="frame" x="50" y="48" width="275" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
@@ -35,16 +41,8 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
-                                <rect key="frame" x="175" y="471" width="25" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EYE-iL-Dpx">
-                                <rect key="frame" x="175" y="147" width="25" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
+                                <rect key="frame" x="50" y="556" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -52,13 +50,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2bz-T8-gkS"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="6ER-na-my9"/>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WSh-1x-Kjn"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ago-n9-Sh3"/>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cyF-xT-KSK"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qut-7g-tAN"/>
-                            <constraint firstItem="EUH-T4-qzS" firstAttribute="top" secondItem="ETY-ma-lrP" secondAttribute="bottom" id="tzW-vW-Pcm"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="C94-sa-U9T"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Ced-Qg-gzG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ETY-ma-lrP" secondAttribute="bottom" id="INw-mY-7I8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYE-iL-Dpx" secondAttribute="trailing" constant="50" id="JwZ-bZ-YFa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XEd-2Q-Kwi" secondAttribute="trailing" constant="50" id="RLq-Bm-Afc"/>
+                            <constraint firstItem="EYE-iL-Dpx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="bO3-vh-1i4"/>
+                            <constraint firstItem="XEd-2Q-Kwi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="kMK-xD-4Bu"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="EYE-iL-Dpx" secondAttribute="bottom" constant="-58" id="m5A-Au-BAV"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="my5-2M-vLJ"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nWz-iX-pfu"/>
+                            <constraint firstItem="EUH-T4-qzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="peQ-ae-oP4"/>
+                            <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wnb-ea-pdm"/>
+                            <constraint firstItem="XEd-2Q-Kwi" firstAttribute="top" secondItem="ETY-ma-lrP" secondAttribute="bottom" constant="-111" id="xaZ-2W-e4i"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -72,6 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
