--- a/MemeMe 1.0/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0/Base.lproj/Main.storyboard
@@ -17,16 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-ma-lrP">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-ma-lrP">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EYE-iL-Dpx">
-                                <rect key="frame" x="50" y="48" width="275" height="30"/>
+                                <rect key="frame" x="50" y="64" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
                                     <barButtonItem title="Pick from Album" id="wT2-At-IYN">
@@ -41,8 +41,14 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVA-rR-ooE">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="CdE-g0-hCj"/>
+                                </items>
+                            </toolbar>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
-                                <rect key="frame" x="50" y="556" width="275" height="30"/>
+                                <rect key="frame" x="50" y="593" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -50,19 +56,22 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="WVA-rR-ooE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0Bq-N9-HKZ"/>
                             <constraint firstItem="EUH-T4-qzS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="C94-sa-U9T"/>
                             <constraint firstItem="EUH-T4-qzS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Ced-Qg-gzG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ETY-ma-lrP" secondAttribute="bottom" id="INw-mY-7I8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYE-iL-Dpx" secondAttribute="trailing" constant="50" id="JwZ-bZ-YFa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XEd-2Q-Kwi" secondAttribute="trailing" constant="50" id="RLq-Bm-Afc"/>
+                            <constraint firstItem="WVA-rR-ooE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Rpd-o7-VWQ"/>
+                            <constraint firstItem="WVA-rR-ooE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ynl-WY-IPZ"/>
                             <constraint firstItem="EYE-iL-Dpx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="bO3-vh-1i4"/>
+                            <constraint firstItem="EYE-iL-Dpx" firstAttribute="top" secondItem="WVA-rR-ooE" secondAttribute="bottom" id="jhz-fn-1ts"/>
                             <constraint firstItem="XEd-2Q-Kwi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="kMK-xD-4Bu"/>
-                            <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="EYE-iL-Dpx" secondAttribute="bottom" constant="-58" id="m5A-Au-BAV"/>
                             <constraint firstItem="ETY-ma-lrP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="my5-2M-vLJ"/>
                             <constraint firstItem="ETY-ma-lrP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nWz-iX-pfu"/>
                             <constraint firstItem="EUH-T4-qzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="peQ-ae-oP4"/>
                             <constraint firstItem="ETY-ma-lrP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wnb-ea-pdm"/>
-                            <constraint firstItem="XEd-2Q-Kwi" firstAttribute="top" secondItem="ETY-ma-lrP" secondAttribute="bottom" constant="-111" id="xaZ-2W-e4i"/>
+                            <constraint firstItem="XEd-2Q-Kwi" firstAttribute="bottom" secondItem="EUH-T4-qzS" secondAttribute="top" id="zfE-Il-mqQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
