--- a/MemeMe 1.0/Base.lproj/Main.storyboard
+++ b/MemeMe 1.0/Base.lproj/Main.storyboard
@@ -26,25 +26,30 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="EUH-T4-qzS">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Pick from Album" id="wT2-At-IYN">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="BoJ-aN-iq8"/>
+                                    <barButtonItem title="Album" id="wT2-At-IYN">
                                         <connections>
                                             <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="e7p-o2-9pD"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Take a Picture" id="lA2-j0-Cng">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="yyk-DW-OVP"/>
+                                    <barButtonItem systemItem="camera" id="lA2-j0-Cng">
                                         <connections>
                                             <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="JEm-F2-OpQ"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="X8j-EJ-Hdb"/>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVA-rR-ooE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Item" id="CdE-g0-hCj"/>
+                                    <barButtonItem systemItem="action" id="CdE-g0-hCj"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="5vV-ll-Loe"/>
+                                    <barButtonItem title="Cancel" id="nLJ-nN-JHu"/>
                                 </items>
                             </toolbar>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-2Q-Kwi">
